<resources>
    <string name="app_name">Crud Android</string>
    <string name="label_code">Código de barras</string>
    <string name="product_form">Cadastro de produtos</string>
    <string name="label_name">Nome do produto</string>
    <string name="label_qtd">Quantidade em estoque</string>
    <string name="provider_list">Fornecedor</string>
    <string name="button">Cadastrar produto</string>
    <string name="provider_form">Cadastrar fornecedor</string>
    <string name="label_cnpj">CNPJ</string>
    <string name="label_provider_name">Nome</string>
    <string name="label_tel_number">Número de telefone</string>
    <string name="button2">Cadastrar fornecedor</string>
    <string name="title_activity_providers">activity_Providers</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="Product">Produtos</string>
    <string name="Forns">Fornecedores</string>
    <string name="CadastroForn">Cadastrar Fornecedor</string>
</resources>